--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -536,6 +536,9 @@
             align-items: center;
             .progress-bar-block{
                 flex: 1 1 auto;
+                .CircularProgressbar .CircularProgressbar-text{
+                    fill: #2e4276;
+                }
             }
             .progress-count {
                 flex: 0 0 auto;
@@ -1670,13 +1673,40 @@
         margin: 0 auto;
     }
 }
+@media($sm-767){
+    .staking-card-block .table-block-cover .table-card{
+        padding-right: 15px;
+    }
+    .staking-card-block .table-block-cover .table-card .info {
+        width: 12px;
+        height: 12px;
+        right: 4px;
+        top: 4px;
+    }
+}
 @media($sm-579){
     .staking-card-block .card-btm-sec .stake-btn {
-        padding: 9px 15px;
+        padding: 11px 15px;
         font-size: 13px;
     }
     .staking-card-block .timer-card-cover .timer-wrapper .time-col .timer-cnt{
         margin-bottom: 2px;
+    }
+}
+@media($sm-479){
+    .staking-card-block .progress-sm-sec .progress-block {
+        width: 70px;
+    }
+    .staking-card-block .progress-sm-sec .progress-label {
+        font-size: 12px;
+    }
+    .staking-card-block {
+        padding: 15px 12px;
+    }
+}
+@media(max-width: 400px){
+    .staking-card-block .progress-sm-sec .progress-block {
+        width: 55px;
     }
 }
 @media(max-width: 380px){
@@ -1971,6 +2001,10 @@
     .welcome-stake-outer-new .content-block {
         margin-right: 15%;
     }
+    .staking-card-block .table-block-cover .table-card{
+        padding-top: 12px;
+        padding-bottom: 14px;
+    }
 }
 @media(max-width:640px){
     .welcome-stake-outer-new::before{
@@ -2005,6 +2039,18 @@
     }
     .welcome-stake-outer-new .logo-bg{
         height: 90%;
+    }
+    .staking-card-block .title-block {
+        margin-bottom: 20px;
+    }
+    .staking-card-block .card-banner-block {
+        margin-bottom: 14px;
+    }
+    .staking-card-block .timer-card-cover{
+        margin-bottom: 12px;
+    }
+    .staking-card-block .table-block-cover .table-card .tab-label{
+        margin-bottom: 8px;
     }
 }
 @media(max-width:479px){
