--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1137,4 +1137,7 @@ $dark-block-2: #2B2C2E;
             fill: #fff;
         }
     }
+    .custom-inp  .css-13cymwt-control input{
+        color: $primary-light !important;
+    }
 }
