--- a/css/side-nav.css
+++ b/css/side-nav.css
@@ -222,11 +222,14 @@
         .nav-block .navbar-collapse-block .wallet-btn-block-mob .wallet-btn-mob:hover {
           opacity: .8; }
   .nav-block .nav-footer-block {
-    padding: 10px 15px 20px 30px;
+    padding: 10px 35px 20px 30px;
     margin-top: auto;
     margin-bottom: 0;
     overflow: hidden;
     flex: 0 0 auto; }
+    @media (max-width: 1679px) {
+      .nav-block .nav-footer-block {
+        padding: 10px 20px 10px 30px; } }
     .nav-block .nav-footer-block .nav-footer-logo {
       margin-bottom: 15px; }
       .nav-block .nav-footer-block .nav-footer-logo a {
@@ -237,7 +240,16 @@
       margin-bottom: 20px;
       font-size: 16px;
       color: #fff;
-      color: #486191; }
+      color: #486191;
+      height: 50px;
+      overflow: hidden; }
+      @media (max-width: 1679px) {
+        .nav-block .nav-footer-block .welcome-msg {
+          height: 45px; } }
+      @media (max-width: 1441px) {
+        .nav-block .nav-footer-block .welcome-msg {
+          height: auto;
+          overflow: unset; } }
       .nav-block .nav-footer-block .welcome-msg span {
         text-transform: capitalize;
         font-weight: 600; }
@@ -255,9 +267,13 @@
 
 .nav-footer-block .nav-footer-logo,
 .nav-footer-block .welcome-msg, .nav-footer-block .nav-soc-block {
-  transition-delay: 1s;
-  opacity: 1; }
+  opacity: 1;
+  visibility: visible; }
 
+.nav-collapse .nav-footer-block .nav-footer-logo,
+.nav-collapse .nav-footer-block .welcome-msg, .nav-collapse .nav-footer-block .nav-soc-block {
+  opacity: 0;
+  visibility: hidden; }
 .nav-collapse .nav-footer-block {
   display: none; }
 .nav-collapse .nav-block .nav-logo-wrapper .nav-toggle-btn {
