--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -1274,6 +1274,10 @@
             color: #2E4276;
         }
         p{
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
             color: #4D6090;
             margin-bottom: 0;
             font-size: 15px;
