--- a/css/common.css
+++ b/css/common.css
@@ -832,4 +832,7 @@ button {
 .nav-tooltip {
   padding-left: 8px; }
 
+.header-tooltip {
+  z-index: 999; }
+
 /*# sourceMappingURL=common.css.map */
