--- a/css/staking.css
+++ b/css/staking.css
@@ -891,6 +891,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
+  @media (max-width: 700px) {
+    .staking-card-block {
+      width: 100%;
+      max-width: 460px;
+      margin: 0 auto; } }
   .staking-card-block .card-banner-block {
     aspect-ratio: 3.198;
     width: 100%;
@@ -1286,7 +1291,10 @@
 @media (max-width: 1350px) {
   .staking-card-block .table-block-cover .table-card .info {
     width: 14px;
-    height: 14px; } }
+    height: 14px; }
+
+  .staking-card-block .card-banner-block {
+    max-height: 160px; } }
 @media (max-width: 991px) {
   .staking-card-block .timer-card-cover .timer-wrapper {
     max-width: 420px;
