--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -1211,6 +1211,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @media (max-width: 700px) {
+        width: 100%;
+        max-width: 460px;
+        margin: 0 auto;
+    }
     .card-banner-block{
         aspect-ratio: 3.198;
         width: 100%;
@@ -1669,6 +1674,9 @@
     .staking-card-block .table-block-cover .table-card .info {
         width: 14px;
         height: 14px;
+    }
+    .staking-card-block .card-banner-block {
+        max-height: 160px;
     }
 }
 @media($sm-991){
