--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1158,4 +1158,7 @@ $dark-block-2: #2B2C2E;
         }
         
     }
+    .staking-card-block .progress-sm-sec .text-block-inner, .staking-card-block .progress-sm-sec .progress-block{
+        border-color: #1B1B1B;       
+    }
 }
