--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -1305,6 +1305,10 @@
             font-size: 22px;
             font-weight: 600;
             color: #2E4276;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
         p{
             display: -webkit-box;
