--- a/scss/common.scss
+++ b/scss/common.scss
@@ -844,6 +844,7 @@ button{
 }
 .not-allowed{
     cursor: not-allowed !important;
+    opacity: .7;
 }
 
 .custom-modal .inp-block-modal .custom-inp.ant-picker{
