--- a/css/staking.css
+++ b/css/staking.css
@@ -676,7 +676,7 @@
             margin-right: 4px; } }
         @media (max-width: 479px) {
           .stake-modal .modal-body .input-group .badges .num-badge {
-            padding: 6px;
+            padding: 6px 8px;
             font-size: 10px;
             margin-right: 2px; } }
         .stake-modal .modal-body .input-group .badges .num-badge:hover {
@@ -743,7 +743,7 @@
     .stake-modal .modal-body .pool-cap-txt .current-pool-label {
       display: flex;
       align-items: center; }
-    @media (max-width: 579px) {
+    @media (max-width: 767px) {
       .stake-modal .modal-body .pool-cap-txt {
         flex-wrap: wrap; } }
     @media (max-width: 991px) {
@@ -752,10 +752,14 @@
     .stake-modal .modal-body .pool-cap-txt .pool-label {
       color: #2E4276;
       font-weight: 600;
-      font-size: 16px; }
+      font-size: 16px;
+      padding-right: 2px; }
       @media (max-width: 1679px) {
         .stake-modal .modal-body .pool-cap-txt .pool-label {
           font-size: 13px; } }
+      @media (max-width: 479px) {
+        .stake-modal .modal-body .pool-cap-txt .pool-label {
+          font-size: 11px; } }
     .stake-modal .modal-body .pool-cap-txt .pool-cont {
       color: #2E4276;
       font-weight: 600;
@@ -765,14 +769,14 @@
           font-size: 16px; } }
       @media (max-width: 579px) {
         .stake-modal .modal-body .pool-cap-txt .pool-cont {
-          font-size: 15px; } }
+          font-size: 14px; } }
     .stake-modal .modal-body .pool-cap-txt .rem-pool-label {
       margin-left: auto;
-      padding-right: 40px;
       display: flex;
       align-items: center; }
-      @media (max-width: 579px) {
+      @media (max-width: 767px) {
         .stake-modal .modal-body .pool-cap-txt .rem-pool-label {
+          padding-right: 0;
           width: 100%;
           padding-top: 5px; } }
       .stake-modal .modal-body .pool-cap-txt .rem-pool-label .pool-cont {
