--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -760,5 +760,22 @@
     display: inline-block; }
   .theme-dark .staking-card-block .progress-sm-sec .text-block-inner, .theme-dark .staking-card-block .progress-sm-sec .progress-block {
     border-color: #1B1B1B; }
+  .theme-dark .welcome-stake-outer-v3 {
+    border: 1px solid #484848;
+    background: #000; }
+  .theme-dark .welcome-stake-outer-v3 .bnr-title {
+    color: #fff; }
+  .theme-dark .welcome-stake-outer-v3 .bnr-title {
+    border-color: #484848; }
+  .theme-dark .welcome-stake-outer-v3 .item-row .item-col.item-col-lg::before {
+    background: radial-gradient(55.25% 55.25% at 50% 50%, rgba(41, 102, 255, 0.3) 0%, rgba(41, 102, 255, 0) 100%); }
+  .theme-dark .welcome-stake-outer-v3 .item-row .item-col p .a-link.link-soon {
+    color: #fff; }
+  .theme-dark .welcome-stake-outer-v3 .item-row .icon img {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(8%) saturate(7400%) hue-rotate(182deg) brightness(124%) contrast(97%); }
+  .theme-dark .img-light {
+    display: none; }
+  .theme-dark .img-dark {
+    display: block; }
 
 /*# sourceMappingURL=dark-theme.css.map */
