--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1041,5 +1041,11 @@ button{
     padding-left: 8px;
 }
 .header-tooltip{
-    z-index: 999;
+    z-index: 1500;
+}
+.img-light{
+    display: block;
+}
+.img-dark{
+    display: none;
 }
