--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1161,4 +1161,29 @@ $dark-block-2: #2B2C2E;
     .staking-card-block .progress-sm-sec .text-block-inner, .staking-card-block .progress-sm-sec .progress-block{
         border-color: #1B1B1B;       
     }
+    .welcome-stake-outer-v3{
+        border: 1px solid #484848;
+        background:#000;
+    }
+    .welcome-stake-outer-v3 .bnr-title{
+        color: #fff;
+    }
+    .welcome-stake-outer-v3 .bnr-title{
+        border-color: #484848;
+    }
+    .welcome-stake-outer-v3 .item-row .item-col.item-col-lg::before{
+        background: radial-gradient(55.25% 55.25% at 50% 50%, rgba(41, 102, 255, 0.3) 0%, rgba(41, 102, 255, 0) 100%);
+    }
+    .welcome-stake-outer-v3 .item-row .item-col p .a-link.link-soon{
+        color: #fff;
+    }
+    .welcome-stake-outer-v3 .item-row .icon img{
+        filter: brightness(0) saturate(100%) invert(100%) sepia(8%) saturate(7400%) hue-rotate(182deg) brightness(124%) contrast(97%);
+    }
+    .img-light{
+        display: none;
+    }
+    .img-dark{
+        display: block;
+    }
 }
